--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ body{
         background-color: rgb(65, 65, 65);
         transform: translateX(15rem);
         transition: 1s all;
+        z-index: 100;
     }
     /* Estilos sencillos para decorar los links */
     nav#navegation ul {
@@ -303,6 +304,7 @@ body{
         cursor: pointer;
         margin-top: 2em;
         border-radius: 5px;
+        z-index: 1000;
     }
     /* Se le quita el borde azul cuando se pulsa en Chrome */
     .menuButton:focus {
@@ -322,6 +324,7 @@ body{
         background-color: rgb(65, 65, 65);
         transform: translateX(15rem);
         transition: 1s all;
+        z-index: 100;
     }
     /* Estilos sencillos para decorar los links */
     nav#navegation ul {
@@ -535,6 +538,7 @@ body{
         cursor: pointer;
         margin-top: 2em;
         border-radius: 5px;
+        z-index: 1000;
     }
     /* Se le quita el borde azul cuando se pulsa en Chrome */
     .menuButton:focus {
@@ -554,6 +558,7 @@ body{
         background-color: rgb(65, 65, 65);
         transform: translateX(15rem);
         transition: 1s all;
+        z-index: 100;
     }
     /* Estilos sencillos para decorar los links */
     nav#navegation ul {
